0.4.1
 - enh: use red plot marker in visualization widget
0.4.0
 - feat: add trash icon in GUI for resetting a score (#26)
 - feat: implement `DCTagSession.reset_score` for resetting a
   score to np.nan (#26)
 - fix: repetitive tool tips in binary classification (#27)
0.3.1
 - fix: minor labeling fix for previous/next in multiple tab
 - fix: properly clear visualization after session is closed
 - fix: start enumerating events at 1 instead of 0 in widget_vis
 - tests: increased coverage to >90%
0.3.0
 - feat: implement multi-class labeling (#24)
 - fix: always go to first event when staring to label
0.2.0
 - feat: add fast-forward and fast-backward button in binary tab (#23)
 - fix: progress bar only showed 1% and 100%
0.1.0
 - feat: implement keyboard shortcuts (#15)
 - feat: automatically flush session in background every 60s (#12)
 - feat: remember data location (#20)
 - feat: ask user before claiming a file (#11)
 - feat: allow to back-up scores if original file is lost (#19)
 - fix: don't clutter the logs
 - fix: properly handle situations where the session file goes away
   for external reasons (e.g. deletion)
 - setup: pin pyqtgraph to 0.12.3
 - setup: require h5py>=3
0.0.3
 - feat: implement binary classification story (multiple issues)
 - feat: ask for username and remember it in settings (#14)
 - enh: print all exceptions to STDOUT
 - enh: modify title when doing binary classification
 - setup: require Python 3.8 or higher
 - setup: bump dclab to 0.39.7
0.0.2
 - add session management submodule (#5)
 - set the initial GUI layout (#4)
0.0.1
 - stub